bootstrap version complete

--- a/frontend/django-react-djeddit-client/app/index.html
+++ b/frontend/django-react-djeddit-client/app/index.html
@@ -10,7 +10,12 @@
 
   <!-- Allow installing the app to the homescreen -->
   <meta name="mobile-web-app-capable" content="yes">
-
+  <link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+  crossorigin="anonymous"
+/>
   <link rel="icon" href="/favicon.ico" />
   <title>Django react djeddit client</title>
 </head>
